add relitions for parent and children Category , update swagger
