# app/Models/Category.php
@@ -15,4 +15,14 @@ class Category extends Model
         'parent_id',
         'discription'
     ];
+
+    public function children()
+    {
+        return $this->hasMany(Category::class, 'parent_id');
+    }
+
+    public function parent()
+    {
+        return $this->belongsTo(Category::class, 'parent_id');
+    }
 }
